### 0.0.14 (development)

las.fm changed their XML order? Anyway, I now explicitly order the tracks
in the client.

### 0.0.13 (released 2008-03-28)

All blocks are now sorted by date, rather than just Feed blocks. This means
that if a contact has blogged something more recently than they've twittered
something, the blog block will be above the twitter block.

The Dopplr provider is back and working again. It now properly uses the
Dopplr auth-bounce code to get itself a token from Dopplr, so should actually
be usable by people other than me.

Lots of trivial little encoding fixes and catches for annoying 'other apps
suck' failure cases.

RSS feed items without titles no longer break the Feed provider.

If you live in a non-GMT timezone, dates now work. Hurrah for going to
conferences and having to suffer under my own bugs.


### 0.0.12 (released 2008-02-14)

Shelf now has a preference to only poll for context and display the window if
a global shortcut key is pressed (currently, this is hard-coded to
Command-Ctrl-J). Turning this on will stop Shelf from polling, it'll manually
display the window when you press the hotkey. BUG - turning this preference
off will require a restart of Shelf before the polling starts again. And yes,
I'll make the key configurable soon.

Feed entries now display about how long ago they were, rather than absolute
times. Do we like this? Maybe this should be a preference.

Messed with the flickr photo display style to include titles, and have smaller
thumbnails. I think I prefer this way.

Special casing for last.fm urls is now in, so you'll see your contact's
recently-played tracks and coverart, if available.

Special-casing for the few pages I know of that have
[totally broken RSS feeds](http://jerakeen.org/blog/2008/02/irritating-rss-feed-links/)
to supress them from the feedlists.

Feeds in the display are now ordered with the most recently updated feed at
the top of the list. 'Special' feeds (twitter, flickr, lastfm) are still